--- a/dataCollection/src/main/resources/producer.properties
+++ b/dataCollection/src/main/resources/producer.properties
@@ -1,4 +1,5 @@
-bootstrap.servers=localhost:9092,localhost:9093,localhost:9094
+bootstrap.servers=195.134.66.230:9092
+#  localhost:9093,localhost:9094
 acks=all
 retries=0
 batch.size=16384
