--- a/recommendations/pom.xml
+++ b/recommendations/pom.xml
@@ -2,17 +2,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <properties>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
-    </properties>
-
     <modelVersion>4.0.0</modelVersion>
-
-
     <groupId>recommendations</groupId>
     <artifactId>recommendations</artifactId>
     <version>1.0-SNAPSHOT</version>
+
+    <parent>
+        <groupId>analyze-customer-transactions</groupId>
+        <artifactId>analyze-customer-transactions</artifactId>
+        <version>1.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
+    </parent>
 
     <dependencies>
         <dependency>
